# emotive-test

./: .gitignore  README.md  docker-compose.yml  dockerfile
app/: .env  pyproject.toml
app/media/videos/: .dockerignore  .gitignore
app/take_home/: celery.py  settings.py  urls.py  views.py
app/videos/: constants.py  exceptios.py  models.py  serializers.py  tasks.py  urls.py  views.py
app/videos/migrations/: 0001_initial.py
